syntax = "proto3";
package test_api.file_data;
option go_package = "github.com/lenush21/file_data";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message FileInfo 
{
string name = 1;
google.protobuf.Timestamp created_at = 2;
google.protobuf.Timestamp updated_at = 3;
}

message GetFileRequest
{
    oneof data {
        string file_name = 1;
        bytes chunk_data = 2;
    }
}

message GetFileResponse
{
    bytes file_chunk = 1;
}

message GetFilesInfoResponse
{
    repeated FileInfo infos = 1;
}

service FileData {
    rpc DownloadFile(GetFileRequest) returns (stream GetFileResponse);
    rpc UploadFile(stream GetFileRequest) returns (GetFileResponse);
    rpc GetFilesInfo(google.protobuf.Empty) returns (GetFilesInfoResponse);
}
